fixbug:swagger GetCommentsByExhibitionID should no auth
