# cmd/comment/doc/swagger.json
@@ -61,11 +61,6 @@
         },
         "/api/comments/exhibitions/{id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "GetCommentsByExhibitionID",
                 "consumes": [
                     "application/json"
